src/component/selectable_list/snapshots/envision__component__selectable_list__tests__filter_view.snap
---
source: src/component/selectable_list/tests.rs
assertion_line: 725
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│> Apple                               │
│  Apricot                             │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
