src/component/selectable_list/snapshots/envision__component__selectable_list__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/selectable_list/tests.rs
expression: terminal.backend().to_string()
---
> Item 1                                
  Item 2                                
  Item 3
