src/component/selectable_list/snapshots/envision__component__selectable_list__tests__view_unfocused.snap
---
source: src/component/selectable_list/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│> A                                   │
│  B                                   │
│  C                                   │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
